Add role claims to JWT and enforce RBAC
Include user roles in JWTs and responses, and apply role-based access control across endpoints. JwtUtil now embeds a "role" claim in access/refresh tokens and provides extractRoles(). CustomUserDetailsService maps user role to SimpleGrantedAuthority. CreateTokenAdapter and RefreshTokenAdapter populate the Jwt response with role, JwtResponse includes a List<String> role, and AuthRestController returns the role in the API response. SecurityConfiguration was updated with requestMatchers to restrict API routes by authority (ADMIN, BARBER).